got distracted for awhile but still did a thing

--- a/index.html
+++ b/index.html
@@ -56,90 +56,90 @@
 
   </div>
 
-  <div class="radioform">
+  <div class="radioform" id="q1">
     <div class="form-group2" id="question1">
 What kind of calculator are YOU?
     </div>
     Question 1:
     How would you fight a bear? <br>
     <label>
-      <input type="radio" name="option" value="option1">
+      <input type="radio" name="option" value="option1" id="opt1">
       Melee
     </label>
     <br>
     <label>
-    <input type="radio" name="option" value="option2">
+    <input type="radio" name="option" value="option2" id="opt2">
     Ranged
     </label>
     <br>
     <label>
-    <input type="radio" name="option" value="option3">
+    <input type="radio" name="option" value="option3" id="opt3">
     Hand-to-hand
     </label>
 
   </div>
-  <div class="radioform">
-    <div class="form-group2" id="question2">
+  <div class="radioform" id="q2">
+    <div class="form-group2" >
 What kind of calculator are YOU?
     </div>
     Question 2:
     The best way to eat a sundae:  <br>
     <label>
-      <input type="radio" name="option" value="option1">
+      <input type="radio" name="option" value="option1" id="opt1">
       With my hands
     </label>
     <br>
     <label>
 
     <label>
-    <input type="radio" name="option" value="option2">
+    <input type="radio" name="option" value="option2" id="opt2">
     Mashing it up and drinking it from the bowl
     </label>
-    <input type="radio" name="option" value="option3">
+    <input type="radio" name="option" value="option3" id="opt3">
     Face-down
   </label>
 </div>
-  <div class="radioform">
-    <div class="form-group2" id="question2">
+  <div class="radioform" id="q3">
+    <div class="form-group2" >
 What kind of calculator are YOU?
     </div>
     Question 2:
     What time in the morning do you wake up?
           <br>
     <label>
-      <input type="radio" name="option" value="option2">
+      <input type="radio" name="option" value="option2" id="opt2">
       8pm
     </label>
     <br>
     <label>
 
     <label>
-    <input type="radio" name="option" value="option1">
+    <input type="radio" name="option" value="option1" id="opt1">
     Noon
     </label>
-    <input type="radio" name="option" value="option3">
+    <input type="radio" name="option" value="option3" id="opt3">
     3am
   </label>
   </div>
-  <div class="radioform">
-    <div class="form-group2" id="question2">
+  <div class="radioform" id="q4">
+    <div class="form-group2" id="question2"  >
 What kind of calculator are YOU?
     </div>
     Question 3:
     Question
           <br>
     <label>
-      <input type="radio" name="option" value="option2">
+      <input type="radio" name="option" value="option2" id="opt2">
       Answer
     </label>
     <br>
     <label>
 
     <label>
-    <input type="radio" name="option" value="option1">
+    <input type="radio" name="option" value="option1" id="opt1">
 Answer
     </label>
-    <input type="radio" name="option" value="option3">
+    <input type="radio" name="option" value="option3" id="opt3">
     Answer
   </label>
   </body>
