--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@ What kind of calculator are YOU?
     Question 1:
     How would you fight a bear? <br>
     <label>
-      <input type="radio" name="option" value="option1" id="opt1">
+      <input type="radio" name="option" value="option1" class="opt1">
       Melee
     </label>
     <br>
     <label>
-    <input type="radio" name="option" value="option2" id="opt2">
+    <input type="radio" name="option" value="option2" class="opt2">
     Ranged
     </label>
     <br>
     <label>
-    <input type="radio" name="option" value="option3" id="opt3">
+    <input type="radio" name="option" value="option3" class="opt3">
     Hand-to-hand
     </label>
 
@@ -85,17 +85,17 @@ What kind of calculator are YOU?
     Question 2:
     The best way to eat a sundae:  <br>
     <label>
-      <input type="radio" name="option" value="option1" id="opt1">
+      <input type="radio" name="option" value="option1" class="opt1">
       With my hands
     </label>
     <br>
     <label>
 
     <label>
-    <input type="radio" name="option" value="option2" id="opt2">
+    <input type="radio" name="option" value="option2" class="opt2">
     Mashing it up and drinking it from the bowl
     </label>
-    <input type="radio" name="option" value="option3" id="opt3">
+    <input type="radio" name="option" value="option3" class="opt3">
     Face-down
   </label>
 </div>
@@ -103,21 +103,21 @@ What kind of calculator are YOU?
     <div class="form-group2" >
 What kind of calculator are YOU?
     </div>
-    Question 2:
+    Question 3:
     What time in the morning do you wake up?
           <br>
     <label>
-      <input type="radio" name="option" value="option2" id="opt2">
+      <input type="radio" name="option" value="option2" class="opt2">
       8pm
     </label>
     <br>
     <label>
 
     <label>
-    <input type="radio" name="option" value="option1" id="opt1">
+    <input type="radio" name="option" value="option1" class="opt1">
     Noon
     </label>
-    <input type="radio" name="option" value="option3" id="opt3">
+    <input type="radio" name="option" value="option3" class="opt3">
     3am
   </label>
   </div>
@@ -125,22 +125,45 @@ What kind of calculator are YOU?
     <div class="form-group2" id="question2"  >
 What kind of calculator are YOU?
     </div>
-    Question 3:
-    Question
+    Question 4:
+    Do you actually care about fortnite?
           <br>
     <label>
-      <input type="radio" name="option" value="option2" id="opt2">
-      Answer
+      <input type="radio" name="option" value="option2" class="opt2">
+      I ordered the fortnite burger
     </label>
     <br>
     <label>
 
     <label>
-    <input type="radio" name="option" value="option1" id="opt1">
-Answer
+    <input type="radio" name="option" value="option1" class="opt1">
+What is that
     </label>
-    <input type="radio" name="option" value="option3" id="opt3">
-    Answer
+    <input type="radio" name="option" value="option3" class="opt3">
+    <br>
+    Please stop asking me that
   </label>
+  </div>
+  <div class="radioform end">
+    <div class="form-group2">
+      <p>You are a:</p>
+    </div>
+
+    <div class="end1">
+     A casio FX-115ES Plus
+    </div>
+
+    <div class="end2">
+    SE CAL3800B Mini Pocket Calculator
+    </div>
+
+    <div class="end3">
+    Smart Living faux-solar Calculator
+    </div>
+
+    <div class="end4">
+    An Accordion.
+    </div>
+  </div>
   </body>
   </html>
